# gaussian_splat

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Info.plist  README.md  imgui.ini
shaders/: gaussian_splat.metal  gaussian_splat_50layer.metal  gaussian_splat_tile.metal  gaussian_splat_types.h
src/: instanced_splat_renderer.h  instanced_splat_renderer.mm  main.mm  metal_renderer.h  metal_renderer.mm  ply_loader.cpp  ply_loader.h  renderable.cpp  renderable.h  simple_geometry_renderer.h  simple_geometry_renderer.mm  trackball_camera.h  trackball_camera.mm
